--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -304,6 +304,7 @@
             android:layout_marginTop="14dp"
             android:layout_marginEnd="14dp"
             android:background="@null"
+            android:onClick="openMainMenu"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/einstellungen" />
