--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -27,21 +27,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.056" />
+            app:layout_constraintGuide_percent="0.07" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_XB_3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.944" />
+            app:layout_constraintGuide_percent="0.93" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_XB_4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.983" />
+            app:layout_constraintGuide_percent="0.985" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_X1"
@@ -133,7 +133,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.965" />
+            app:layout_constraintGuide_percent="0.975" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_YB2"
@@ -154,7 +154,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.035" />
+            app:layout_constraintGuide_percent="0.025" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_L_Y1"
@@ -358,23 +358,25 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@null"
+            android:scaleType="centerCrop"
             android:onClick="openMainMenu"
-            app:layout_constraintBottom_toBottomOf="@id/guideline_YB3"
+            app:layout_constraintTop_toTopOf="@id/guideline_YB4"
             app:layout_constraintEnd_toEndOf="@id/guideline_XB_4"
             app:layout_constraintStart_toStartOf="@id/guideline_XB_3"
-            app:layout_constraintTop_toTopOf="@id/guideline_YB4"
+            app:layout_constraintDimensionRatio="1:1"
             app:srcCompat="@drawable/einstellungen" />
 
         <ImageButton
             android:id="@+id/edit_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:scaleType="centerCrop"
             android:background="@null"
             android:onClick="changeButton"
+            app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintBottom_toBottomOf="@id/guideline_YB1"
             app:layout_constraintEnd_toEndOf="@id/guideline_XB_2"
             app:layout_constraintStart_toStartOf="@id/guideline_XB_1"
-            app:layout_constraintTop_toTopOf="@id/guideline_YB2"
             app:srcCompat="@drawable/edit_mode" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
