--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/fassade"
-        tools:context=".MainActivity">
+        tools:context=".viewmodel.MainActivity">
 
         <!--Vertical  guidelines  -->
         <androidx.constraintlayout.widget.Guideline
