Basic functioning Recorder

--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -367,5 +367,17 @@
             app:srcCompat="@drawable/edit_mode"
             android:contentDescription="@string/toggle_between_play_and_edit_mode" />
 
+        <ImageButton
+            android:id="@+id/record_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            android:contentDescription="@string/toggle_between_play_and_edit_mode"
+            app:layout_constraintBottom_toBottomOf="@id/guideline_YB1"
+            app:layout_constraintEnd_toEndOf="@id/guideline_XB_4"
+            app:layout_constraintStart_toStartOf="@id/guideline_XB_3"
+            app:layout_constraintTop_toTopOf="@id/guideline_YB2"
+            app:srcCompat="@drawable/play_mode" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.drawerlayout.widget.DrawerLayout>
