--- a/app/src/main/res/layout/sound_menu.xml
+++ b/app/src/main/res/layout/sound_menu.xml
@@ -128,7 +128,7 @@
 
     <EditText
         android:id="@+id/title"
-        android:layout_width="288dp"
+        android:layout_width="wrap_content"
         android:layout_height="42dp"
         android:autofillHints=""
         android:background="@android:color/transparent"
