--- a/app/src/main/res/layout/recordings_menu.xml
+++ b/app/src/main/res/layout/recordings_menu.xml
@@ -87,7 +87,7 @@
             android:layout_marginEnd="30dp"
             android:layout_marginStart="30dp"
             android:layout_marginTop="20dp"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
 
 
