added track length to TrackSelectionMenu

--- a/app/src/main/res/layout/recordings_menu.xml
+++ b/app/src/main/res/layout/recordings_menu.xml
@@ -50,6 +50,13 @@
         app:layout_constraintGuide_percent="0.1" />
 
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_X_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.9" />
+
     <EditText
         android:id="@+id/title"
         android:layout_width="0dp"
@@ -73,7 +80,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:fillViewport="true"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/guideline_X_1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/guideline_X2">
@@ -84,11 +91,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginEnd="30dp"
             android:layout_marginStart="30dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginEnd="30dp"
             android:orientation="vertical">
-
 
 
         </LinearLayout>
