--- a/app/src/main/res/layout/fassade_2.xml
+++ b/app/src/main/res/layout/fassade_2.xml
@@ -205,16 +205,15 @@
             app:layout_constraintStart_toStartOf="parent"
             app:srcCompat="@drawable/edit_mode" />
 
-        <Button
-            android:id="@+id/button2"
+        <ImageButton
+            android:id="@+id/change_fassade"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="28dp"
-            android:layout_marginTop="340dp"
-            android:text="Back"
-            android:onClick="changeFassade"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_baseline_change_circle_24" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.drawerlayout.widget.DrawerLayout>
