--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,7 +51,7 @@
             app:layout_constraintGuide_percent="0.093" />
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_X2"
+            android:id="@+id/guideline_X_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -225,7 +225,7 @@
             style="@style/windowbutton_style"
             android:tag="jazz_riff.sf2,0"
             app:layout_constraintBottom_toBottomOf="@id/guideline_LC_Y3"
-            app:layout_constraintEnd_toEndOf="@id/guideline_X2"
+            app:layout_constraintEnd_toEndOf="@id/guideline_X_2"
             app:layout_constraintStart_toStartOf="@id/guideline_X1"
             app:layout_constraintTop_toTopOf="@id/guideline_L_Y4"
             tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
@@ -245,7 +245,7 @@
             style="@style/windowbutton_style"
             android:tag="jazz_riff.sf2,2"
             app:layout_constraintBottom_toBottomOf="@id/guideline_L_Y1"
-            app:layout_constraintEnd_toEndOf="@id/guideline_X2"
+            app:layout_constraintEnd_toEndOf="@id/guideline_X_2"
             app:layout_constraintStart_toStartOf="@id/guideline_X1"
             app:layout_constraintTop_toTopOf="@id/guideline_L_Y2"
             tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
